fixed padding so words don't look squished

--- a/styles/place.css
+++ b/styles/place.css
@@ -39,6 +39,7 @@ h2{
 
 li {
     list-style: none;
+    padding: 5px;
 }
 
 
